# finalAP

./: LICENSE  README.md
finalAP/: CMakeLists.txt  CustomPage.cpp  CustomPage.h  CustomPage.ui  README.md  api.cpp  api.h  ctgs.h  difficulty.cpp  difficulty.h  difficulty.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  names.cpp  names.h  names.ui  pvp_mode.cpp  pvp_mode.h  pvp_mode.ui  qst.h  quiz.cpp  quiz.h  quiz2.h  randstr.h  starting.cpp  starting.h  starting.ui  survival_mode.cpp  survival_mode.h  survival_mode.ui
